--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
 					</div>
 				</div>
 				<form id="form" name="register-form">
-				<div class="row justify-content-center code-view">
+				<div class="row justify-content-center">
 					<div class="input col-md-8">
 						<h4>Search your country</h4>
 						<input id="countries" name="country" class="single-in form-control" placeholder="Search countries" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search countries'" required="true" value="<%= country %>%>"/>
