--- a/views/update.ejs
+++ b/views/update.ejs
@@ -8,7 +8,7 @@
 					</div>
 				</div>
 				<form id="form" name="register-form">
-				<div class="row justify-content-center code-view">
+				<div class="row justify-content-center">
 					<% if (typeof errorType != 'undefined' && errorType) { %>
 					<div class="card">
 						<h3>ERROR</h3>
