--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,6 +1,6 @@
 <% include ./head %>
 
-<section class="code-view section-gap-sm">
+<section class="section-gap-sm">
 	<div class="container">
 		<div class="row d-flex justify-content-center session-title">
 			<div class="col-md-8 header-text">
