--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no,, shrink-to-fit=no" />
 		<link rel="shortcut icon" href="/favicon.ico">
 		<meta name="author" content="LBF">
 		<meta name="description" content="Share PokemonGo Trainer Code to be friends">
