--- a/views/search.ejs
+++ b/views/search.ejs
@@ -107,9 +107,13 @@
 	</div>
 </section>
 
-<div class="row justify-content-center pb-50">
-	<a href="#" rel="nofollow"><button id="more-btn" class="primary-btn text-uppercase" style="display: none;" data-continent="<%= continent%>">Show more trainers<span class="lnr lnr-pointer-up"></span></button></a>
-</div>
+<section>
+	<div class="container">
+		<div class="row justify-content-center pb-50">
+			<a href="#" rel="nofollow"><button id="more-btn" class="primary-btn text-uppercase" style="display: none;" data-continent="<%= continent%>">Show more trainers<span class="lnr lnr-pointer-up"></span></button></a>
+		</div>
+	</div>
+</section>
 
 <a id="top" href="#" rel="nofollow"><span class="lnr lnr-chevron-up-circle"></span></a>
 
