Change top button width image

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -46,7 +46,7 @@
 
 		<div class="row controls">
 			<div class="col-4 like">
-				<a href="#"><span class="lnr lnr-thumbs-up"></span><span class="like-val">{%= code.like %}</span></a>
+				<a href="#" rel="nofollow"><span class="lnr lnr-thumbs-up"></span><span class="like-val">{%= code.like %}</span></a>
 			</div>
 			<div class="col-8" data-country_code="{%= rc.reqCountryCode %}" data-continent="{%= rc.reqContinent %}" data-code_id="{%= code.id %}">
 			</div>
@@ -115,7 +115,7 @@
 	</div>
 </section>
 
-<a id="top" href="#" rel="nofollow"><span class="lnr lnr-chevron-up-circle"></span></a>
+<a id="top" href="#" rel="nofollow"><img src="/img/top.png" width="42" height="42"></a>
 
 <% include ./foot %>
 
