--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1423,16 +1423,14 @@ body {
   left: 0;
   z-index: 99;
   background-color: #fff;
-  padding: 20px 0;
+  padding-bottom: 20px;
   width: 100% !important;
   box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3); }
 
 .header-decoration {
   height: 5px;
-  top: 0px;
-  position: fixed;
   width: 100%;
-  z-index: 999; }
+  padding-bottom: 20px; }
 
 .header-decoration div {
   height: 5px;
