--- a/public/scss/theme/_home.scss
+++ b/public/scss/theme/_home.scss
@@ -385,12 +385,41 @@ section {
 }
 
 .search-icon {
-  margin-right: 15px;
+  margin-right: 17px;
   margin-top: 2px;
 
   span {
 	color: #000;
 	font-size: 19px;
+  }
+}
+
+.find-icon {
+  margin-right: 15px;
+  cursor: pointer;
+
+  span {
+	color: #000;
+	font-size: 17px;
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.find-user {
+  width: 100%;
+  padding-top: 10px;
+  text-align: right;
+
+  input {
+	width: 140px;
+	font-size: 12px;
+	border: 0;
+	outline: 0;
+	background: transparent;
+	border-bottom: 1px solid #000;
   }
 }
 
