--- a/views/head.ejs
+++ b/views/head.ejs
@@ -51,6 +51,7 @@
 							<% } else { %>
 							<a href="/account/login">Login</a>
 							<% } %>
+							<a href="/notice">Notice</a>
 							<a href="/about">About</a>
 						</nav>
 
