--- a/public/scss/theme/_header.scss
+++ b/public/scss/theme/_header.scss
@@ -10,7 +10,8 @@ body {
   background-color:#fff;
   padding-bottom: 20px;
   width: 100% !important;
-  box-shadow: -21.213px 21.213px 30px 0px rgba(158,158,158,0.3);
+  //box-shadow: -21.213px 21.213px 30px 0px rgba(158,158,158,0.3);
+  border-bottom: 1px dotted rgba(158,158,158,0.7);
 }
 
 .header-decoration {
