--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,12 @@
 <% include ./head %>
 
+<section class="notice">
+	<div class="" align="center">
+		<a href="/notice">
+			<span class="lnr lnr-bullhorn"></span><span>N E W</span>- Try to search by trainer name!
+		</a>
+	</div>
+</section>
 <section class="banner-area relative" id="home">
 	<div class="overlay overlay-bg"></div>
 	<div class="container">
