Change uri name (search to lookup, find to search)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,17 +48,17 @@
 		</div>
 		<div id="map-continents">
 			<ul class="continents">
-				<li class="c1"><a href="/code/search?continent=AF">Africa</a></li>
-				<li class="c2"><a href="/code/search?continent=AS">Asia</a></li>
-				<li class="c3"><a href="/code/search?continent=OC">Australia</a></li>
-				<li class="c4"><a href="/code/search?continent=EU">Europe</a></li>
-				<li class="c5"><a href="/code/search?continent=NA">North America</a></li>
-				<li class="c6"><a href="/code/search?continent=SA">South America</a></li>
+				<li class="c1"><a href="/code/lookup?continent=AF">Africa</a></li>
+				<li class="c2"><a href="/code/lookup?continent=AS">Asia</a></li>
+				<li class="c3"><a href="/code/lookup?continent=OC">Australia</a></li>
+				<li class="c4"><a href="/code/lookup?continent=EU">Europe</a></li>
+				<li class="c5"><a href="/code/lookup?continent=NA">North America</a></li>
+				<li class="c6"><a href="/code/lookup?continent=SA">South America</a></li>
 			</ul>
 		</div>
 
 		<div class="col-lg-12 d-flex justify-content-center">
-			<a href="/code/search"><button class="primary-btn mt-30 text-uppercase">More Countries<span class="lnr lnr-arrow-right"></span></button></a>
+			<a href="/code/lookup"><button class="primary-btn mt-30 text-uppercase">More Countries<span class="lnr lnr-arrow-right"></span></button></a>
 		</div>
 	</div>
 </section>
