--- a/views/view.ejs
+++ b/views/view.ejs
@@ -65,7 +65,7 @@
 		</div>
 
 		<div class="row justify-content-center pt-40 pb-20">
-			<a href="/code/search"><button class="primary-btn text-uppercase">Look up other trainers<span class="lnr lnr-arrow-right"></span></button></a>
+			<a href="/code/lookup"><button class="primary-btn text-uppercase">Look up other trainers<span class="lnr lnr-arrow-right"></span></button></a>
 		</div>
 	</div>
 </section>
