--- a/views/head.ejs
+++ b/views/head.ejs
@@ -68,7 +68,7 @@
 							<div class="user-icon"><a href="/account/login"><span class="lnr lnr-user"></span></a></div>
 						</div>
 						<% } %>
-						<div class="search-icon"><a href="/code/search"><span class="lnr lnr-rocket"></span></a></div>
+						<div class="search-icon"><a href="/code/lookup"><span class="lnr lnr-rocket"></span></a></div>
 						<% if (typeof user == 'object' && user) { %>
 						<div class="find-icon"><a><span class="lnr lnr-magnifier"></span></a></div>
 						<% } %>
