--- a/views/myView.ejs
+++ b/views/myView.ejs
@@ -62,14 +62,14 @@
 						<!--<a><span class="lnr lnr-thumbs-down"></span><span class="dislike-val"><%= code.dislike %></span></a>-->
 					</div>
 					<div class="another col-6">
-						<a href="/code/update/<%= code.id %>" class="modify-btn"><span class="lnr lnr-cog"></span>FIX</a>&nbsp;
+						<a href="/code/update/<%= code.id %>" class="modify-btn"><span class="lnr lnr-cog"></span>UPDATE</a>&nbsp;
 						<a href="#" class="delete-btn" data-code_id="<%= code.id %>" data-country_code="<%= code.country_code %>"><span class="lnr lnr-trash"></span>DEL</a>
 					</div>
 				</div>
 			</div>
 			<% }); %>
 		<div class="row justify-content-center pt-20 pb-20">
-			<a href="/code/search"><button class="primary-btn text-uppercase">Look up other trainers<span class="lnr lnr-arrow-right"></span></button></a>
+			<a href="/code/lookup"><button class="primary-btn text-uppercase">Look up other trainers<span class="lnr lnr-arrow-right"></span></button></a>
 		</div>
 		<% } %>
 	</div>
